# x86emu

./: .gitignore  CMakeLists.txt  Makefile  README.md  bios.cc  bios.h  cpu.cc  cpu.h  gui.cc  instruction.cc  instruction.h  main.cc  memory.cc  memory.h  modrm.cc  modrm.h  register.cc  register.h  serial.h  util.cc  util.h
asm/: Makefile  asm_func.s  asmhead.asm  boot_main.c  boot_main.h  har.ld  test.asm
src/: CMakeLists.txt  compile_commands.json  cpu.cc  cpu.h  main.cc  memory.h  register.cc  register.h
test/: a.out  test.cc
